--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,25 +18,23 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.ScreenViewingActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.P2PScreenSharing">
         </activity>
         <activity
             android:name=".presentation.ui.ScreenSharingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.P2PScreenSharing"/>
+        <activity
+            android:name=".presentation.ui.MainActivity"
             android:exported="true"
+            android:label="@string/app_name"
             android:theme="@style/Theme.P2PScreenSharing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".presentation.ui.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.P2PScreenSharing">
-
         </activity>
     </application>
 
