--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
@@ -32,9 +33,17 @@
         <activity
             android:name=".presentation.activity.ScreenViewingActivity"
             android:exported="false"
-            android:theme="@style/Theme.P2PScreenSharing"></activity>
+            android:theme="@style/Theme.P2PScreenSharing" />
         <activity
             android:name=".presentation.activity.ScreenSharingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.P2PScreenSharing" />
+        <activity
+            android:name=".presentation.activity.SettingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.P2PScreenSharing" />
+        <activity
+            android:name=".presentation.activity.ScreenStreamingActivity"
             android:exported="false"
             android:theme="@style/Theme.P2PScreenSharing" />
         <activity
